<?xml version="1.0"?>
<package format="2">
  <name>DHPVS</name>
  <version>1.0.0</version>
  <description>The Dual-Hemispherical Photometric Visual Servoing package</description>


  <maintainer email="nathan.crombez@utbm.fr">Nathan Crombez</maintainer>
  <license>GPLv3</license>
  <author  email="nathan.crombez@utbm.fr">Nathan Crombez</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_filters</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>message_filters</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>message_filters</exec_depend>

</package>
